--- a/BTBuoi_04/case_problem_01/cg_register.html
+++ b/BTBuoi_04/case_problem_01/cg_register.html
@@ -7,8 +7,8 @@
       Case Problem 1
 
       CGIP Registration Form
-      Author: 
-      Date:   
+      Author: Tường Vy
+      Date:   10/12/2022
 
       Filename:   cg_register.html
 
@@ -19,6 +19,9 @@
    <title>CGIP Registration Form</title>
    <link href="cg_base.css" rel="stylesheet" />
    <link href="cg_styles.css" rel="stylesheet" />
+   <link rel="stylesheet" href="./cg_validate.css">
+   <link rel="stylesheet" href="./cg_forms.css">
+   <script src="./cg_script.js"></script>
 </head>
 
 <body>
